#6123 Use Textfield, Card and RaisedButton components to fix layout issue

--- a/src/app/styles/components/layout/_content-column.scss
+++ b/src/app/styles/components/layout/_content-column.scss
@@ -12,4 +12,8 @@
   &--wide {
     max-width: layout(column-width-wide);
   }
+
+  &--narrow {
+    max-width: layout(column-width-narrow);
+  }
 }
