--- a/src/app/styles/shared/_layout.scss
+++ b/src/app/styles/shared/_layout.scss
@@ -10,7 +10,7 @@ $layout-sizes: (
   card-width-small: units(40),
   card-width: units(56),
   card-width-large: units(85),
-  column-width-narrow: units(100),
+  column-width-narrow: units(56),
   column-width-wide: units(152)
   );
 
